workshop03/bggapp-ing.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: bggapp-ing
  labels:
    app: bgg
    tier: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: bgg-144.126.243.70.nip.io
    http: 
      paths:
      - path: /v1 
        pathType: Prefix 
        backend: 
          service:
            name: bggappv1-svc 
            port: 
              number: 8080
      - path: /v2 
        pathType: Prefix 
        backend: 
          service:
            name: bggappv2-svc 
            port: 
              number: 8080
